//
//  Constants.swift
//  ResumeGenerator
//
//  Created by Mac_Admin on 15/09/19.
//  Copyright © 2019 Karthi Samigoundanpalayamshanmugam02. All rights reserved.
//

import Foundation
struct Constant {
    let kHomeViewTitle = "Home"
    let kCell = "Cell"
    let kPersonalInformation = "Personal Information"
    let kPlaceHolderArray = ["First Name", "Last Name", "Email Id", "Mobile Number","Address Line1", "Address Line2", "DOB (DD-MM-YYYY)", "Current Company", "Experience in Years", "Skill Set", "Primary Education Marks", "Secondary Education Marks", "Higher Education Marks"]
    let kPreview = "Preview"
    let kURL = "https://api.myjson.com/bins/ssg01"
}
